<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="10dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal"
		android:layout_marginBottom="5dp">

		<EditText
			android:layout_width="wrap_content"
			android:ems="10"
			android:layout_weight="1.0"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:layout_marginRight="5dp"
			android:id="@+id/mainEditText1"
			android:hint="@string/et_hint"/>
		
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="..."
			style="?android:attr/buttonStyleSmall"
			android:id="@+id/mainButton3"/>

	</LinearLayout>

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/mainCheckBox1"
		android:layout_marginBottom="5dp"
		android:text="@string/background"/>
	
	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/mainCheckBox2"
		android:layout_marginBottom="5dp"
		android:text="@string/vibration"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/save"
		style="?android:attr/buttonStyleSmall"
		android:layout_marginBottom="5dp"
		android:id="@+id/mainButton1"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/test"
		style="?android:attr/buttonStyleSmall"
		android:id="@+id/mainButton2"/>

</LinearLayout>

